[package]
name = "arc_mutex_perf"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fastrand = "2.0.1"
rand = "0.8.5"
parking_lot = "0.12"
futures = { version = "0.3", features = ["async-await"] }
tokio = { version = "1.0", features = ["full"] }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports", "async_tokio", "async_futures"] }

[[bench]]
name = "my_benchmark"
harness = false
